--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     {% include nav.html %}
   </header>
   <body style="background-color:{{theme.background-color}};">
-    <div class="container dumbarton-spacer-sm bg-img">
+    <div class="container dumbarton-spacer-sm">
       {{ content }}
     </div>
     {% include footer.html %}
