--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,7 @@ layout: default
 {% assign theme = site.data.themes[site.ui_theme] %}
 
 <!-- ABOUT ME SECTION -->
-<div class="card mx-auto border-0 bg-img col-md-12 col-lg-12 col-sm-12" style="position:relative;background-color:{{theme.home-background-color}};">
+<div class="card mx-auto border-0 bg-img col-md-12 col-lg-12 col-sm-12" style="position:relative;">
       
     <!-- dynamic text begins -->
     <div class="intro intro-body">
