--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,7 @@ layout: default
 {% assign theme = site.data.themes[site.ui_theme] %}
 
 <!-- ABOUT ME SECTION -->
-<div class="card mx-auto border-0 bg-img col-md-12 col-lg-12 col-sm-12" style="position:relative;">
+<div class="card mx-auto border-0 bg-img col-md-12 col-lg-12 col-sm-12">
       
     <!-- dynamic text begins -->
     <div class="intro intro-body">
@@ -14,11 +14,15 @@ layout: default
 
     <!-- profile image begins-->
     <div class="row">
+      <div class="col-lg-3 col-md-3 col-sm-3 offset-lg-9 offset-md-9 offset-sm-9">
         {% if site.animate %}
-          <img src="{{ site.profile_image }}" class="img-me float-left animate__animated animate__fadeInLeft shadow bg-white" alt="...">
+          <img src="{{ site.profile_image }}" class="img-me" alt="...">
         {% else %}
-          <img src="{{ site.profile_image }}" class="img-me float-left" alt="..." style="border-radius:50%; width:300px; height:200px; object-fit:cover; border: 3px solid #149f98;"/>
+          <img src="{{ site.profile_image }}" class="img-me float-left" alt="..." 
+                style="border-radius:50%; width:300px; height:200px; object-fit:cover; border: 3px solid #149f98;"
+            />
         {% endif %}
+      </div>
     </div>
     <!-- profile image ends -->
     
