--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,9 +26,9 @@ layout: default
     </div>
     <!-- profile image ends -->
     
-    <div class="card-body mt-0 row" style="color:{{theme.education-font-color}};">
+    <div class="card-body mt-0 row">
         <!-- content -->  
-        <p style="color:{{theme.education-font-color}};">
+        <p>
             {{ content | markdownify}}
         <p>      
         <!-- education -->
