--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,7 @@ layout: default
 {% assign theme = site.data.themes[site.ui_theme] %}
 
 <!-- ABOUT ME SECTION -->
-<div class="card mx-auto border-0 bg-img col-md-12 col-lg-12 col-sm-12">
+<div class="bg-img col-md-12 col-lg-12 col-sm-12">
       
     <!-- dynamic text begins -->
     <div class="intro intro-body">
@@ -14,7 +14,7 @@ layout: default
 
     <!-- profile image begins-->
     <div class="row">
-      <div class="col-lg-3 col-md-3 col-sm-3 offset-lg-9 offset-md-9 offset-sm-9">
+      <div class="col-lg-4 col-md-4 col-sm-4 offset-lg-4 offset-md-4 offset-sm-4" style="text-align: center;">
         {% if site.animate %}
           <img src="{{ site.profile_image }}" class="img-me" alt="...">
         {% else %}
