--- a/css/main.css
+++ b/css/main.css
@@ -980,22 +980,16 @@ $font-family: Proxima, Helvetica, Arial, sans-serif;
 }
 
 /* dynamic text */
-.intro {
-  display: table;
-  width: 100%;
-  text-align: center;
-}
 .intro-body {
     vertical-align: middle;
+    margin: 2rem;
+    text-align: center;
     .intro-text {
       font-size: 1rem;
-}
+      font-family:Courgette;
+    }
   @media (min-width: 768px) {
     height: 100%;
     padding: 0;
-    .intro-body .intro-text {
-        font-size: 1rem;
-    }
   }
-
 }
