--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,8 +7,8 @@ layout: default
 <div class="bg-img col-md-12 col-lg-12 col-sm-12">
       
     <!-- dynamic text begins -->
-    <div class="intro intro-body">
-        <span class="intro-text" style="font-family:Courgette;"></span>
+    <div class="intro-body">
+        <span class="intro-text"></span>
     </div>
     <!-- dynamic text ends -->
 
