--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,40 +4,9 @@
   {% include head.html %}
   {% include nav.html %}
   <body>
-    <header>
-      <!-- ABOUT ME SECTION -->
-<div class="bg-img col-md-12 col-lg-12 col-sm-12">
-      
-    <!-- dynamic text begins -->
-    <div class="intro-body">
-        <span class="intro-text"></span>
-    </div>
-    <!-- dynamic text ends -->
-
-    <!-- profile image begins-->
-    <div class="row">
-      <div class="col-lg-4 col-md-4 col-sm-4 offset-lg-4 offset-md-4 offset-sm-4" style="text-align: center;">
-        {% if site.animate %}
-          <img src="{{ site.profile_image }}" class="img-me" alt="...">
-        {% else %}
-          <img src="{{ site.profile_image }}" class="img-me float-left" alt="..." 
-                style="border-radius:50%; width:300px; height:200px; object-fit:cover; border: 3px solid #149f98;"
-            />
-        {% endif %}
-      </div>
-    </div>
-    <!-- profile image ends -->
-</div>
-<!-- ABOUT ME SECTION ENDS-->
-
-    </header>
+    {% include header.html %}
     <div class="container dumbarton-spacer-sm">
-          <!-- content --> 
-    <div class="card-body" style="text-align: center;">
-          <p>
-          {{ content | markdownify }}
-          </p>      
-    </div>
+    {{content}}
     </div>
     {% include footer.html %}
   </body>
