--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,6 +22,13 @@
       </div>
     </div>
     <!-- profile image ends -->
+
+    <!-- content --> 
+    <div class="card-body" style="text-align: center;">
+          <p>
+          {{ content | markdownify }}
+          </p>      
+    </div>
 </div>
 <!-- ABOUT ME SECTION ENDS-->
 </header>
