--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,9 +25,9 @@
 
     <!-- content --> 
     <div class="card-body" style="text-align: center;">
-          <p>
-          {{ content | markdownify }}
-          </p>      
+          <p>{{ site.welcome_line1 }}</p>
+          </br>
+          <p>{{ site.welcome_line2 }}</p>
     </div>
 </div>
 <!-- ABOUT ME SECTION ENDS-->
