--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,7 +24,7 @@
     <!-- profile image ends -->
 
     <!-- content --> 
-    <div class="card-body" style="text-align: center; text: gold; ">
+    <div class="card-body" style="text-align: center; color: gold; ">
           <p>{{ site.welcome_line1 }}</p>
           <p>{{ site.welcome_line2 }}</p>
     </div>
