--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,7 +16,7 @@ layout: default
 {% if site.animate %}
 <div class="card mx-auto animate__animated animate__slideInUp animate__delay-1s glowing-border" style="max-width: 100%;">
 {% else %}
-<div class="card mx-auto mb-1 border-0"  style="max-width: 100%;">
+<div class="card mx-auto mb-1 border-0"  style="max-width: 100%; margin-top:10px">
 {% endif %}
 
 {% if site.home_option == "education" %}
