--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 permalink: contact.html
-title: Contact Me
+title: contact
 header-img:  
 last-updated: 2024-07-16 10:12 AM
 ---
