--- a/_includes/education.html
+++ b/_includes/education.html
@@ -1,3 +1,8 @@
+---
+permalink: education.html
+title: education
+---
+
 {% assign theme = site.data.themes[site.ui_theme] %} 
 <h5 class="card-title" style="font-family:{{ theme.education-title-font}};font-size:{{ theme.education-title-size }};color:{{theme.education-font-color}};">Education</h5>
 <ul class="list-unstyled">
