--- a/_layouts/timeline.html
+++ b/_layouts/timeline.html
@@ -1,10 +1,16 @@
 ---
-layout: default
+layout: 
 permalink: timeline.html
 title: timeline
 ---
+<!DOCTYPE html>
+{% assign theme = site.data.themes[site.ui_theme] %}
+<html lang="{{ site.lang }}">
+  {% include head.html %}
+  {% include nav.html %}
+  <body>
 
-<!-- Timeline Start -->
+        <!-- Timeline Start -->
 {% assign theme = site.data.themes[site.ui_theme] %} 
       <ul class="timeline col-md-4 col-lg-4 col-sm-4">
         {% for event in site.data.timeline %} {% assign loopindex = forloop.index |
@@ -54,3 +60,8 @@ title: timeline
         </li>
       </ul>
 <!-- Timeline End -->
+
+        
+  {% include footer.html %}
+  </body>
+</html>
