--- a/_layouts/education.html
+++ b/_layouts/education.html
@@ -3,20 +3,13 @@ layout:
 permalink: education.html
 title: education
 ---
-
-{% assign theme = site.data.themes[site.ui_theme] %} 
-
----
-layout: 
-permalink: timeline.html
-title: timeline
----
 <!DOCTYPE html>
 {% assign theme = site.data.themes[site.ui_theme] %}
 <html lang="{{ site.lang }}">
   {% include head.html %}
   {% include nav.html %}
   <body>
+    <!-- education starts -->
 <h5 class="card-title" style="font-family:{{ theme.education-title-font}};font-size:{{ theme.education-title-size }};color:{{theme.education-font-color}};">Education</h5>
 <ul class="list-unstyled">
   {% for entry in site.data.education %}
