--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,7 +9,7 @@ title: home
 <div class="row">
 {% if site.home_option == "timeline" %}
     <div class="col-lg-12 col-md-12 col-sm-12">
-    {% include timeline.html %}
+    {% include timeline-intro.html %}
     </div>
 {% endif %}
 </div>
@@ -22,11 +22,22 @@ title: home
 {% endif %}
 
 {% if site.home_option == "education" %}
-<div class="card-header" style="background-color:{{ theme.home-highlight-background }}; overflow-x: auto; white-space: nowrap;">
-    <ul class="nav nav-tabs card-header-tabs" id="test-list" role="tablist" style="display: flex; flex-wrap: nowrap; overflow-y: hidden;scrollbar-width: thin;">
+<div class="card-header" 
+    style="background-color:{{ theme.home-highlight-background }}; overflow-x: auto; white-space: nowrap;">
+    <ul 
+        class="nav nav-tabs card-header-tabs" 
+        id="test-list" role="tablist" 
+        style="display: flex; flex-wrap: nowrap; overflow-y: hidden;scrollbar-width: thin;">
       {% for section in site.data.sections %}
         <li class="nav-item" style="flex: 0 0 auto;">
-          <a class="nav-link{% if section.first %} active{% endif %}" id="{{ section.jsid }}" href="#{{section.id}}" role="tab" aria-controls="{{section.id}}" aria-selected="true" style="font-family:{{ theme.font}};color:{{ theme.home-highlight-header-text}};">{{section.emoji}} {{section.name}}</a>
+          <a 
+              class="nav-link{% if section.first %} active{% endif %}" 
+              id="{{ section.jsid }}" href="#{{section.id}}" 
+              role="tab" aria-controls="{{section.id}}"
+              aria-selected="true" 
+              style="font-family:{{ theme.font}};color:{{ theme.home-highlight-header-text}};">
+              {{section.emoji}} {{section.name}}
+          </a>
         </li>
       {% endfor %}
     </ul>
