--- a/css/main.css
+++ b/css/main.css
@@ -82,7 +82,7 @@ a.highlighted:hover {
     max-height:150px;
     position: relative;
     object-fit:cover; 
-    border: 3px solid #149f98;
+    border: 3px solid #000000;
     margin-top: 0.2rem;
 }
     
