--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 <html lang="{{ site.lang }}">
   {% include head.html %}
   {% include nav.html %}
-  <body style="color:{{theme.color}}, background-color:{{theme.backgrond-color}}">
+  <body style="background-color:{{theme.backgrond-color}}">
     {% include header.html %}
     <div class="container dumbarton-spacer-sm">
     {{content}}
