--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 <html lang="{{ site.lang }}">
   {% include head.html %}
   {% include nav.html %}
-  <body style="background-color:{{theme.background-color}}, color: {{theme.font-color}}">
+  <body style="background-color:{{theme.background-color}}; color: {{theme.font-color}};">
     {% include header.html %}
     <div class="container dumbarton-spacer-sm">
     {{content}}
