--- a/_includes/timeline-intro.html
+++ b/_includes/timeline-intro.html
@@ -1,6 +1,6 @@
 <!-- Timeline Start -->
 {% assign theme = site.data.themes[site.ui_theme] %} 
-      <ul class="timeline col-md-4 col-lg-4 col-sm-4">
+      <ul class="timeline col-md-4 col-lg-4 col-sm-4" style="color: {{theme.font-color}};">
         {% for event in site.data.timeline %} {% assign loopindex = forloop.index |
         modulo: 2 %} {% capture class %} {% if loopindex == 0 %}
         timeline-inverted {% endif %} {% endcapture %}
