--- a/_layouts/education.html
+++ b/_layouts/education.html
@@ -8,7 +8,7 @@ title: education
 <html lang="{{ site.lang }}">
   {% include head.html %}
   {% include nav.html %}
-  <body style="color: {{theme.font-color}};">
+  <body style="background-color:{{theme.background-color}}; color: {{theme.font-color}};">
     <!-- education starts -->
 <h5 class="card-title" style="font-family:{{ theme.education-title-font}};font-size:{{ theme.education-title-size }};color:{{theme.education-font-color}};">Education</h5>
 <ul class="list-unstyled">
