--- a/_layouts/timeline.html
+++ b/_layouts/timeline.html
@@ -8,7 +8,7 @@ title: timeline
 <html lang="{{ site.lang }}">
   {% include head.html %}
   {% include nav.html %}
-  <body>
+  <body style="background-color:{{theme.background-color}}; color: {{theme.font-color}};">
 
         <!-- Timeline Start -->
 {% assign theme = site.data.themes[site.ui_theme] %} 
