--- a/_includes/timeline-intro.html
+++ b/_includes/timeline-intro.html
@@ -41,7 +41,7 @@
           <div class="timeline-image">
             <img
               class="img-circle img-responsive"
-              src="{{site.baseurl}}{{ site.data.timeline.timeline-img }}"
+              src="{{ site.data.timeline.timeline-img }}"
               alt=""
             />
           </div>
