--- a/_includes/timeline-intro.html
+++ b/_includes/timeline-intro.html
@@ -1,9 +1,15 @@
 <!-- Timeline Start -->
 {% assign theme = site.data.themes[site.ui_theme] %} 
-      <ul class="timeline col-md-4 col-lg-4 col-sm-4" style="color: {{theme.font-color}};">
-        {% for event in site.data.timeline %} {% assign loopindex = forloop.index |
-        modulo: 2 %} {% capture class %} {% if loopindex == 0 %}
-        timeline-inverted {% endif %} {% endcapture %}
+      <ul class="timeline col-md-4 col-lg-4 col-sm-4" 
+            style="color: {{theme.font-color}};">
+            
+        {% for event in site.data.timeline %} 
+            {% assign loopindex = forloop.index | modulo: 2 %} 
+            {% capture class %} 
+                  {% if loopindex == 0 %}
+                    timeline-inverted 
+                  {% endif %} 
+            {% endcapture %}
 
         <li class="{{ class }}">
           <div class="timeline-image">
@@ -41,7 +47,7 @@
           <div class="timeline-image">
             <img
               class="img-circle img-responsive"
-              src="{{site.baseurl}}{{ site.data.timeline.timeline-img }}"
+              src="{{ site.data.timeline.timeline-img }}"
               alt=""
             />
           </div>
