--- a/_includes/timeline-intro.html
+++ b/_includes/timeline-intro.html
@@ -47,7 +47,7 @@
           <div class="timeline-image">
             <img
               class="img-circle img-responsive"
-              src="{{ site.data.timeline.timeline-img }}"
+              src="{{site.baseurl}}{{site.data.timeline.timeline-img}}"
               alt=""
             />
           </div>
