--- a/css/main.css
+++ b/css/main.css
@@ -81,7 +81,7 @@ a.highlighted:hover {
     max-width:150px; 
     max-height:150px;
     position: relative;
-    object-fit:cover; 
+    object-fit:contain; /*cover*/
     border: 3px solid #000000;
     margin-top: 0.2rem;
 }
