--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -9,14 +9,14 @@ last-updated: 2024-07-16 10:12 AM
     <!-- Profile Section -->
     <div class="profile-section" style="text-align:center; margin-bottom:20px;">
         <!-- Profile Image -->
-        <img src="/assets/img/avatar/me.jpg" alt="Reems" class="img-circle"/>
+        <img src="/assets/img/avatar/me.jpg" alt="Reems" class="img-contact"/>
         <h1>Reems</h1>
         <p>PM</p>
     </div>
   
     <!-- Introduction or About Me Section -->
     <div class="about-me">
-        <p>Feel free to reach out to me through any of the platforms below or send me an email for any inquiries or collaborations.</p>
+        <p>Feel free to reach out to me through any of the platforms below OR send me an email for any inquiries or collaborations.</p>
     </div>
   
     <!-- Contact Methods -->
