--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -39,7 +39,7 @@ last-updated: 2024-07-16 10:12 AM
         <div class="contact-method" style="margin-bottom:10px;">
             <span style="color:{{theme.contact-social-color}};">
                 <i class="fab fa-linkedin fa-fw"></i>
-                <span>LinkedIn: <a href="https://www.linkedin.com/in/reemstk">Reems</a></span>
+                <span>LinkedIn: <a href="https://www.linkedin.com/in/reemstk">/in/reemstk</a></span>
             </span>
         </div>
         <!-- Personal Email -->
