--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -9,7 +9,16 @@ last-updated: 2024-07-16 10:12 AM
     <!-- Profile Section -->
     <div class="profile-section" style="text-align:center; margin-bottom:20px;">
         <!-- Profile Image -->
+        <div class="flip-box">
+  <div class="flip-box-inner">
+    <div class="flip-box-front">
         <img src="/assets/img/avatar/me.jpg" alt="Reems" class="img-contact"/>
+        </div>
+    <div class="flip-box-back">
+        <img src="/assets/img/avatar/me.jpg" alt="Reems" class="img-contact"/>
+            </div>
+  </div>
+</div>
         <h1>Reems</h1>
         <p>PM</p>
     </div>
@@ -106,6 +115,46 @@ last-updated: 2024-07-16 10:12 AM
         width: 100%;
         height: auto;
     }
+
+.flip-box {
+  background-color: transparent;
+  width: 300px;
+  height: 200px;
+  border: 1px solid #f1f1f1;
+  perspective: 1000px;
+}
+
+.flip-box-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+.flip-box:hover .flip-box-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-box-front, .flip-box-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.flip-box-front {
+  background-color: #bbb;
+  color: black;
+}
+
+.flip-box-back {
+  background-color: #555;
+  color: white;
+  transform: rotateY(180deg);
+}
 </style>
 <script>
 function startClippy(){
