--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -15,7 +15,7 @@ last-updated: 2024-07-16 10:12 AM
         <img src="/assets/img/avatar/me.jpg" alt="Reems" class="img-contact"/>
         </div>
     <div class="flip-box-back">
-        <img src="/assets/img/avatar/me.jpg" alt="Reems" class="img-contact"/>
+        <img src="/assets/img/avatar/learner.jpg" alt="Reems" class="img-contact"/>
             </div>
   </div>
 </div>
