--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -118,9 +118,8 @@ last-updated: 2024-07-16 10:12 AM
 
 .flip-box {
   background-color: transparent;
-  width: 300px;
-  height: 200px;
-  border: 1px solid #f1f1f1;
+  max-width: 250px;
+  max-height: 250px;
   perspective: 1000px;
 }
 
@@ -145,14 +144,7 @@ last-updated: 2024-07-16 10:12 AM
   backface-visibility: hidden;
 }
 
-.flip-box-front {
-  background-color: #bbb;
-  color: black;
-}
-
 .flip-box-back {
-  background-color: #555;
-  color: white;
   transform: rotateY(180deg);
 }
 </style>
