--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -118,13 +118,12 @@ last-updated: 2024-07-16 10:12 AM
 
 .flip-box {
   background-color: transparent;
-  max-width: 250px;
-  max-height: 250px;
+  width: 250px;
+  height: 250px;
   perspective: 1000px;
 }
 
 .flip-box-inner {
-  position: relative;
   width: 100%;
   height: 100%;
   text-align: center;
