--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -9,7 +9,7 @@ last-updated: 2024-07-16 10:12 AM
     <!-- Profile Section -->
     <div class="profile-section" style="text-align:center; margin-bottom:20px;">
         <!-- Profile Image -->
-        <div class="flip-box">
+        <div class="flip-box offset-md-5 offset-lg-5">
   <div class="flip-box-inner">
     <div class="flip-box-front">
         <img src="/assets/img/avatar/me.jpg" alt="Reems" class="img-contact"/>
