--- a/css/main.css
+++ b/css/main.css
@@ -1005,3 +1005,36 @@ $font-family: Proxima, Helvetica, Arial, sans-serif;
     padding: 0;
   }
 }
+
+/*--------------contact----------------*/
+.flip-box {
+  background-color: transparent;
+  height: 250px;
+  width: 100%;
+  perspective: 1000px;
+}
+
+.flip-box-inner {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+.flip-box:hover .flip-box-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-box-front, .flip-box-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.flip-box-back {
+  transform: rotateY(180deg);
+}
+/*-----end of contact----------*/
