--- a/css/main.css
+++ b/css/main.css
@@ -1003,7 +1003,7 @@ $font-family: Proxima, Helvetica, Arial, sans-serif;
     max-width: 250px;
     max-height: 250px;
     /*position: relative;*/
-    object-fit: contain;
+    object-fit: cover;
     border: 2px solid darkgoldenrod;
 }
 
