--- a/css/main.css
+++ b/css/main.css
@@ -825,7 +825,7 @@ $font-family: Proxima, Helvetica, Arial, sans-serif;
 
 .timeline > li:last-child {
     margin-bottom: 0;
-    min-height: 150px;
+    min-height: 146px; /*updated on 7/29/2024*/
 }
 
 .timeline .timeline-heading h4 {
