--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -55,7 +55,7 @@ last-updated: 2024-07-16 10:12 AM
         <div class="contact-method" style="margin-bottom:10px;">
             <span style="color:{{theme.contact-social-color}};">
                 <i class="fas fa-envelope fa-fw"></i>
-                <span>Personal Email: reemstk.cv [at] gmail [dot] com</span>
+                <span>Email: reemstk.cv [at] gmail [dot] com</span>
             </span>
         </div>
         <!-- Academic Email
