--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -67,6 +67,7 @@ last-updated: 2024-07-16 10:12 AM
             </span>
         </div>
         {% endfor %}
+        <!-- end loop -->
         <!-- Academic Email
         <div class="contact-method" style="margin-bottom:10px;">
             <span class="icon-container" style="color:{{theme.contact-social-color}};">
