--- a/_includes/timeline-intro.html
+++ b/_includes/timeline-intro.html
@@ -1,56 +1,55 @@
 <!-- Timeline Start -->
 {% assign theme = site.data.themes[site.ui_theme] %} 
-      <ul class="timeline col-md-5 col-lg-5 col-sm-5" 
-            style="color: {{theme.font-color}};">
-            
-        {% for event in site.data.timeline %} 
-            {% assign loopindex = forloop.index | modulo: 2 %} 
-            {% capture class %} 
-                  {% if loopindex == 0 %}
-                    timeline-inverted 
-                  {% endif %} 
-            {% endcapture %}
-
-        <li class="{{ class }}">
-          <div class="timeline-image">
-            <img
-              class="img-circle img-responsive"
-              src="{{site.baseurl}}{{ event.image }}"
-              alt=""
-            />
-          </div>
-          <div class="timeline-panel">
-            <div class="timeline-heading">
-              <h5>{{ event.date }}</h5>
-            </div>
-            <div class="timeline-body">
-              <h6>{{ event.institute }}</h6>  <!-- | markdownify -->
-              <h6><i> {{ event.description }} </i></h6>
-              <ul style=" font-size: 90%;">
-                {% for content in event.content %}
-                    {% for data in content.data %}                       
-                        <li> {{ data }} </li>
-                        <ul>
-                        {% for item in content.item %}
-                           <li>{{ item }}</li>
-                        {% endfor %}
-                        </ul>
-                    {% endfor %}
-                {% endfor %}
-              </ul>
-            </div>
-          </div>
-        </li>
-        {% endfor %}
-<!--
-        <li class="timeline-inverted">
-          <div class="timeline-image">
-            <img
-              class="img-circle img-responsive"
-              src="{{site.baseurl}}{{site.data.timeline.timeline-img}}"
-              alt=""
-            />
-          </div>
-        </li>-->
-      </ul>
+<ul class="timeline col-md-5 col-lg-5 col-sm-5" 
+  style="color: {{theme.font-color}};">
+  {% for event in site.data.timeline %} 
+  {% assign loopindex = forloop.index | modulo: 2 %} 
+  {% capture class %} 
+  {% if loopindex == 0 %}
+  timeline-inverted 
+  {% endif %} 
+  {% endcapture %}
+  <li class="{{ class }}">
+    <div class="timeline-image">
+      <img
+        class="img-circle img-responsive"
+        src="{{site.baseurl}}{{ event.image }}"
+        alt=""
+        />
+    </div>
+    <div class="timeline-panel">
+      <div class="timeline-heading">
+        <h5>{{ event.date }}</h5>
+      </div>
+      <div class="timeline-body">
+        <h6>{{ event.institute }}</h6>
+        <!-- | markdownify -->
+        <h6><i> {{ event.description }} </i></h6>
+        <ul style=" font-size: 90%;">
+          {% for content in event.content %}
+          {% for data in content.data %}                       
+          <li> {{ data }} </li>
+          <ul>
+            {% for item in content.item %}
+            <li>{{ item }}</li>
+            {% endfor %}
+          </ul>
+          {% endfor %}
+          {% endfor %}
+        </ul>
+      </div>
+    </div>
+  </li>
+  {% endfor %}
+  <!--
+    <li class="timeline-inverted">
+      <div class="timeline-image">
+        <img
+          class="img-circle img-responsive"
+          src="{{site.baseurl}}{{site.data.timeline.timeline-img}}"
+          alt=""
+        />
+      </div>
+    </li>-->
+</ul>
 <!-- Timeline End -->
