--- a/css/main.css
+++ b/css/main.css
@@ -1193,7 +1193,8 @@ $font-family: Proxima, Helvetica, Arial, sans-serif;
 
 .bg-img {
   height: auto;
-  padding: 80px 0;
+  padding: 100px 0;
+  width: 100%
   background: url(/assets/img/intro-bg.gif) no-repeat bottom center scroll;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -1260,3 +1261,11 @@ $font-family: Proxima, Helvetica, Arial, sans-serif;
   transform: rotateY(180deg);
 }
 /*-----end of contact----------*/
+
+.profile-text {
+  text-align: center;
+  color: #01C5D6;
+  background: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  padding: 20px;
+}
