--- a/css/main.css
+++ b/css/main.css
@@ -1264,7 +1264,7 @@ $font-family: Proxima, Helvetica, Arial, sans-serif;
 
 .profile-text {
   text-align: center;
-  color: #01C5D6;
+  color: #00ccff;
   background: rgba(0, 0, 0, 0.5);
   width: 100%;
   padding: 20px;
