--- a/_includes/timeline-intro.html
+++ b/_includes/timeline-intro.html
@@ -1,7 +1,8 @@
 <!-- Timeline Start -->
 {% assign theme = site.data.themes[site.ui_theme] %} 
 <ul class="timeline col-md-5 col-lg-5 col-sm-5" 
-  style="color: {{theme.font-color}};">
+  style="color: {{theme.font-color}};
+  margin-top: 4em;">
   {% for event in site.data.timeline %} 
   {% assign loopindex = forloop.index | modulo: 2 %} 
   {% capture class %} 
