--- a/css/main.css
+++ b/css/main.css
@@ -1268,4 +1268,5 @@ $font-family: Proxima, Helvetica, Arial, sans-serif;
   background: rgba(0, 0, 0, 0.5);
   width: 100%;
   padding: 20px;
+  margin-top: 2em;
 }
