--- a/css/main.css
+++ b/css/main.css
@@ -1265,7 +1265,7 @@ $font-family: Proxima, Helvetica, Arial, sans-serif;
 
 .profile-text {
   text-align: center;
-  color: #00ccff;
+  color: gold; /* #00ccff; */
   background: rgba(0, 0, 0, 0.5);
   width: 100%;
   padding: 20px;
