--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
     <!-- dynamic text ends -->
     <!-- profile image begins-->
     <div class="row">
-      <div class="col-lg-4 col-md-4 col-sm-4 offset-lg-4 offset-md-4 offset-sm-4">
+      <div class="col-lg-4 col-md-4 col-sm-4 offset-lg-4 offset-md-4 offset-sm-4" style="text-align: center">
         {% if site.animate %}
         <img src="{{ site.profile_image }}" class="img-me" alt="...">
         {% else %}
