--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,6 +7,7 @@ title: home
 <!-- timeline -->
 <div class="row">
   {% if site.home_option == "timeline" %}
+  <h4>TIMELINE</h4>
   <div class="col-lg-12 col-md-12 col-sm-12">
     {% include timeline-intro.html %}
   </div>
