--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,7 +7,8 @@ title: home
 <!-- timeline -->
 <div class="row">
   {% if site.home_option == "timeline" %}
-  <h4>TIMELINE</h4>
+  <br></br>
+  <h5 style="text-align: center;"">TIMELINE</h5>
   <div class="col-lg-12 col-md-12 col-sm-12">
     {% include timeline-intro.html %}
   </div>
