--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,7 +8,7 @@ title: home
 <div class="row">
   {% if site.home_option == "timeline" %}
   <div class="col-lg-12 col-md-12 col-sm-12">
-     <h5 style="text-align: center;"">TIMELINE</h5>
+     <h5 style="text-align: center; margin-top:1em;">TIMELINE</h5>
     {% include timeline-intro.html %}
   </div>
   {% endif %}
