--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -19,7 +19,7 @@ last-updated: 2024-07-16 10:12 AM
       </div>
     </div>
   </div>
-  <h1>Reems</h1>
+  <h4>Reems Thomas Kottacal</h4>
   <p>PM</p>
 </div>
 <!-- Introduction or About Me Section -->
