--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -24,7 +24,7 @@ last-updated: 2024-07-16 10:12 AM
 </div>
 <!-- Introduction or About Me Section -->
 <div class="about-me">
-  <p>Feel free to reach out to me through any of the platforms below OR send me an email for any inquiries or collaborations.</p>
+  <p>Reach out to me for any inquiries or collaborations</p>
 </div>
 <!-- Contact Methods -->
 <div class="contact-methods" style="background:#f9f9f9; padding:20px; border-radius:10px;">
