--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -19,7 +19,7 @@ last-updated: 2024-07-16 10:12 AM
       </div>
     </div>
   </div>
-  <h4 style="margin-top:1em;">Reems Thomas Kottackal</h4>
+  <h4 style="margin-top:1em;">{{ site.author }}</h4>
   <!--<p>PM</p> -->
 </div>
 <!-- Introduction or About Me Section -->
